Clear Claimed Marks log message at wrong location in the log

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • gc
    • b21

      The Clear Claimed Marks log message is printed (if it is) as part of the post evacuation section. However it is executed as part of the actual evacuation phase (and should probably be moved to the pre evacuation phase anyway as the "Evacuation phase" should only contain the actual parallel evacuation).

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: