8176885: Clear Claimed Marks log message at wrong location in the log

Move message and code to the pre evacuation phase part of the GC

Reviewed-by: sjohanss, sangheki